Bug 379606 - Titler - Kdenlive crashes when switching fonts
Summary: Titler - Kdenlive crashes when switching fonts
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Video Effects & Transitions (other bugs)
Version First Reported In: 17.04.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Vincent PINON
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-07 14:31 UTC by Filip Krejdl
Modified: 2017-05-19 12:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Error message with backtrace (23.10 KB, text/plain)
2017-05-07 14:31 UTC, Filip Krejdl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Krejdl 2017-05-07 14:31:21 UTC
Created attachment 105377 [details]
Error message with backtrace

I can't submit report in OS because of code 143, so I post here completely error message with backtrace like .txt.

From message:
Kdenlive crashes everytime when I want choose another font for the second time in the subtitle setting. I have installed fonts from the Internet but Kdenlive crashes also when I use system fonts.
How it looks: https://youtu.be/wlDHRWV2cck
Comment 1 farid 2017-05-07 17:32:28 UTC
Changed title for better description of problem, haven't tested though.
Comment 2 Filip Krejdl 2017-05-07 17:46:36 UTC
(In reply to farid from comment #1)
> Changed title for better description of problem, haven't tested though.

OK, it's better
Comment 3 Vincent PINON 2017-05-19 12:04:53 UTC
Git commit 94b1b432ecd06d6ec71ebf3ee69942b13815b8d3 by Vincent PINON, on behalf of Vincent Pinon.
Committed on 19/05/2017 at 12:03.
Pushed by vpinon into branch 'Applications/17.04'.

Fix crash changing title font for 2nd time

M  +0    -14   src/titler/titlewidget.cpp

https://commits.kde.org/kdenlive/94b1b432ecd06d6ec71ebf3ee69942b13815b8d3