Fix crash changing title font for 2nd time

BUG: 379606