src/titler/titlewidget.cpp
@@ -169,8 +169,6 @@ TitleWidget::TitleWidget(const QUrl &url, const Timecode &tc, const QString &pro
     connect(textOutline, SIGNAL(valueChanged(int)), this, SLOT(slotUpdateText()));
     connect(font_weight_box, SIGNAL(currentIndexChanged(int)), this, SLOT(slotUpdateText()));
 
-    connect(font_family, &QComboBox::editTextChanged, this, &TitleWidget::slotFontText);
-
     connect(rectFColor, &KColorButton::changed, this, &TitleWidget::rectChanged);
     connect(rectBColor, &KColorButton::changed, this, &TitleWidget::rectChanged);
     connect(plain_rect, &QAbstractButton::clicked, this, &TitleWidget::rectChanged);
@@ -2348,18 +2346,6 @@ void TitleWidget::slotAddEffect(int /*ix*/)
                 break;
             }
         }*/
-}
-
-void TitleWidget::slotFontText(const QString &s)
-{
-    const QFont f(s);
-    if (f.exactMatch()) {
-        // Font really exists (could also just be a «d» if the user
-        // starts typing «dejavu» for example).
-        font_family->setCurrentFont(f);
-    }
-    // Note: Typing dejavu serif does not recognize the font (takes sans)
-    // in older Qt versions. Case must match there (except for first letter)
 }
 
 void TitleWidget::slotEditTypewriter(int /*ix*/)
